@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-14T01:06:25Z",
-  "count_outdated" : 762,
-  "uniques_outdated" : 436,
-  "count" : 785,
-  "uniques" : 454,
+  "timestamp" : "2023-08-14T08:19:19Z",
+  "count_outdated" : 763,
+  "uniques_outdated" : 437,
+  "count" : 786,
+  "uniques" : 455,
   "clones" : [
-    {
-      "timestamp": "2023-07-31T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-01T00:00:00Z",
       "count": 1,
@@ -109,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
